# knuckledragger

./: .buildinfo  .gitignore  .pytest_timing_report.json  CHANGELOG.md  CLAUDE.md  CNAME  LICENSE  README.md  flake.nix  genindex.html  index.html  install.sh  mypy.ini  notes  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  pytest.ini  search.html  searchindex.js  setup.py  sphinx-reading-durations.json  tutorial.ipynb
.doctrees/: environment.pickle  index.doctree
.doctrees/_autosummary/: kdrag.AStruct.doctree  kdrag.AbelSemiGroup.doctree  kdrag.Antisymm.doctree  kdrag.Assoc.doctree  kdrag.Comm.doctree  kdrag.CommMonoid.doctree  kdrag.CommSemiRing.doctree  kdrag.ComplexSort.doctree  kdrag.FinP.doctree  kdrag.GFP.doctree  kdrag.Guard.doctree  kdrag.Head.doctree  kdrag.Id.doctree  kdrag.Idem.doctree  kdrag.LFP.doctree  kdrag.LeftIdentity.doctree  kdrag.ListSort.doctree  kdrag.MetaVar.doctree  kdrag.Monoid.doctree  kdrag.NatSort.doctree  kdrag.OptionSort.doctree  kdrag.Pf.doctree  kdrag.PostFix.doctree  kdrag.PreFix.doctree  kdrag.Refl.doctree  kdrag.RightIdentity.doctree  kdrag.SemiGroup.doctree  kdrag.SemiRing.doctree  kdrag.SeqStore.doctree  kdrag.SeqVecP.doctree  kdrag.SetMonotone.doctree  kdrag.Some.doctree  kdrag.Tail.doctree  kdrag.TupleSort.doctree  kdrag.Undef.doctree  kdrag.UnitSort.doctree  kdrag.Vec.doctree  kdrag.all.doctree  kdrag.all.pprint.doctree  kdrag.astruct.doctree  (+967 more)
.github/: FUNDING.yml
.github/workflows/: CI.yml  documentation.yml  maturin-build.yml  publish.yml  python-package.yml
.nix/: pyproject.patch
_autosummary/: kdrag.AStruct.html  kdrag.AbelSemiGroup.html  kdrag.Antisymm.html  kdrag.Assoc.html  kdrag.Comm.html  kdrag.CommMonoid.html  kdrag.CommSemiRing.html  kdrag.ComplexSort.html  kdrag.FinP.html  kdrag.GFP.html  kdrag.Guard.html  kdrag.Head.html  kdrag.Id.html  kdrag.Idem.html  kdrag.LFP.html  kdrag.LeftIdentity.html  kdrag.ListSort.html  kdrag.MetaVar.html  kdrag.Monoid.html  kdrag.NatSort.html  kdrag.OptionSort.html  kdrag.Pf.html  kdrag.PostFix.html  kdrag.PreFix.html  kdrag.Refl.html  kdrag.RightIdentity.html  kdrag.SemiGroup.html  kdrag.SemiRing.html  kdrag.SeqStore.html  kdrag.SeqVecP.html  kdrag.SetMonotone.html  kdrag.Some.html  kdrag.Tail.html  kdrag.TupleSort.html  kdrag.Undef.html  kdrag.UnitSort.html  kdrag.Vec.html  kdrag.all.html  kdrag.all.pprint.html  kdrag.astruct.html  (+967 more)
_sources/: index.rst.txt
_sources/_autosummary/: kdrag.AStruct.rst.txt  kdrag.AbelSemiGroup.rst.txt  kdrag.Antisymm.rst.txt  kdrag.Assoc.rst.txt  kdrag.Comm.rst.txt  kdrag.CommMonoid.rst.txt  kdrag.CommSemiRing.rst.txt  kdrag.ComplexSort.rst.txt  kdrag.FinP.rst.txt  kdrag.GFP.rst.txt  kdrag.Guard.rst.txt  kdrag.Head.rst.txt  kdrag.Id.rst.txt  kdrag.Idem.rst.txt  kdrag.LFP.rst.txt  kdrag.LeftIdentity.rst.txt  kdrag.ListSort.rst.txt  kdrag.MetaVar.rst.txt  kdrag.Monoid.rst.txt  kdrag.NatSort.rst.txt  kdrag.OptionSort.rst.txt  kdrag.Pf.rst.txt  kdrag.PostFix.rst.txt  kdrag.PreFix.rst.txt  kdrag.Refl.rst.txt  kdrag.RightIdentity.rst.txt  kdrag.SemiGroup.rst.txt  kdrag.SemiRing.rst.txt  kdrag.SeqStore.rst.txt  kdrag.SeqVecP.rst.txt  kdrag.SetMonotone.rst.txt  kdrag.Some.rst.txt  kdrag.Tail.rst.txt  kdrag.TupleSort.rst.txt  kdrag.Undef.rst.txt  kdrag.UnitSort.rst.txt  kdrag.Vec.rst.txt  kdrag.all.pprint.rst.txt  kdrag.all.rst.txt  kdrag.astruct.rst.txt  (+967 more)
docs/: .gitignore  Makefile  add_proofs_to_rst.py  conf.py  index.rst
docs/paper/: .gitignore  knuckle.tex  refs.bib
examples/: .gitignore  README.md  babylonian.py  convert.sh  intlist.py  kt.py  nng.ipynb  short_talk.ipynb  tla.py
examples/LoVe/: 05_function.ipynb
examples/cpdt/: README.md
examples/leroy_compiler/: IMP.ipynb  README.md
examples/real_analysis_game/: README.md
examples/soft_found/: README.md
examples/tough_smt2/: star_star_kleene.smt2
examples/zfc_in_hol/: README.md  zfc_in_hol.py
kdrag/: __init__.py  all.py  config.py  datatype.py  hypothesis.py  kernel.py  notation.py  property.py  reflect.py  rewrite.py  smt.py  smt.pyi  tactics.py  tele.py  utils.py
kdrag/contrib/: hoare.py  telescope.py
kdrag/parsers/: prolog.py  smtlib.py  tptp.py
kdrag/printers/: c.py  lean.py  rust.py
kdrag/solvers/: .gitignore  __init__.py  __main__.py  aprove.py  datalog.py  egglog.py  egraph.py  gappa.py  install.sh  kb.py  prolog.py  untrusted.py
kdrag/theories/: Complex.py  Interval.py  Nat.py  Vec.py  bitvec.py  bool.py  complex.py  fixed.py  float.py  fun.py  int.py  interval.py  list.py  nat.py  option.py  real.py  regex.py  seq.py  set.py  vec.py  zf.py
knuckledragger/: __init__.py  kernel.py  notation.py  sexp.py  smt.py  tactics.py  term.py  tptp.py  utils.py
knuckledragger/backends/: trs.py
knuckledragger/solvers/: .gitignore  __init__.py  install.sh
knuckledragger/theories/: Complex.py  Int.py  Interval.py  Nat.py  Real.py  Seq.py  Vec.py  equational.ipynb  peano.ipynb  zf.py
knuckledragger/z3/: notation.py
rust/: Cargo.toml
rust/kdrag/: Cargo.toml
rust/kdrag/src/: lib.rs
rust/kdragrs/: Cargo.toml  pyproject.toml
rust/kdragrs/src/: lib.rs
src/kdrag/: __init__.py  all.py  cast.py  config.py  contract.py  contracts.py  datatype.py  hypothesis.py  kernel.py  modal.py  notation.py  property.py  refine.py  reflect.py  rewrite.py  smt.py  smt.pyi  tactics.py  tele.py  termination.py  utils.py
tests/: conftest.py  perf.py  test_algebra.py  test_bench.py  test_bisim.py  test_examples.py  test_hypothesis.py  test_kernel.py  test_logic.py  test_nand2tetris.py  test_notebooks.py  test_parsers.py  test_pcode.py  test_proofstate_errors.py  test_real.py  test_reflect.py  test_rewrite.py  test_rust.py  test_sheffer.py  test_solver.py  test_tla.py  test_typeclass.py  test_utils.py  test_vec.py
theories/: 2023-11-09-z3-itp.ipynb  acl2.ipynb  adt.ipynb  equational.ipynb  hoare.ipynb  julia.ipynb  knuckledrag2.py  match.py  notation.ipynb  reals.ipynb  termination.ipynb  tptp.ipynb
thoughts/: cas.ipynb  match.py  notes
tools/: .gitignore  Makefile  README.md  TODO.md  kdrag.c  profile_tests.py  test.smt2  timing_report.py  try_solvers.py
(+220 files in other folders)
