[project]
name = "knuckledragger"
version = "0.1.1"
authors = [{ name = "Philip Zucker", email = "philzook58@gmail.com" }]
description = "Interactive Theorem Prover"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
dependencies = [
    "z3-solver >= 4.8",
    "egglog >= 9.0.0",
    "python-flint",
    "sympy",
    "lark",
    "hypothesis>=6.124.1",
    "cffi>=1.17.1",
]
[project.urls]
homepage = "https://github.com/philzook58/knuckledragger"


# For raw pip? 
[project.optional-dependencies]
dev = ["pytest>=6.0", "nbclient", "jupyter"]
yosys = ["yowasp-yosys>=0.50.0.0.post858"]
pypcode = ["cle>=9.2.148", "pypcode>=3.0.3"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
kdrag = [".sh"]

[tool.ruff]
exclude = ["tests"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"kdrag/smt.py" = ["F405", "F403"]
"kdrag/all.py" = ["F401"]
"tutorial.ipynb" = ["F811"]
"examples/**/*.py" = ["F401", "F405", "F403", "E402"]

[tool.pyright]
include = ["kdrag"]
exclude = [
    "kdrag/solvers/eprover/*",
    "kdrag/solvers/gappa*",
    "kdrag/solvers/Prover9/*",
]

[tool.pytest.ini_options]
norecursedirs = [
    "kdrag/solvers/eprover",
    "kdrag/solvers/gappa*",
    "kdrag/solvers/Prover9",
    "examples/converted_notebooks",
]
addopts = "--doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"

markers = ["slow: Marks tests as long-running."]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
]
