[package]
name = "kdragrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kdragrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
kdrag = { path = "../kdrag" }
z3 = { workspace = true }
z3-sys = { workspace = true }
